--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 xlsx Cracker by https://github.com/ignobilis
 =============================================
 
-Unprotects and re-protects previously unprotected *.xlsx files
+Unprotects and re-protects previously unprotected *.xlsx sheets
 
